layout issues #35

--- a/Content/main.css
+++ b/Content/main.css
@@ -55,7 +55,7 @@ label.bx-disabled {
 
 .box {
     float: left;
-    width: 40%;
+    width: 30%;
 }
 
 .plots {
